# hr-music-bot

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GITHUB_DEPLOY_STEPS.md  HOW_TO_LISTEN.md  LICENSE  README.md  VERCEL_DEPLOYMENT.md  WINDOWS_SETUP.md  bot-definition.toml  check-sdk.py  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  run-bot.py  setup-windows.bat  start-bot.py  test-connection-fixed.py  test-connection.py  vercel.json
api/: bot.js
bot/: cube_system.py  main.py  music_bot.py  music_platforms.py  requirements.txt
client/src/: App.tsx  index.css
client/src/components/: analytics-chart.tsx  bot-status.tsx  music-queue.tsx  room-card.tsx  start-bot-button.tsx
client/src/hooks/: use-websocket.ts
client/src/pages/: bot-setup.tsx  dashboard.tsx  queue-manager.tsx  room-management.tsx  saved-configs.tsx
public/: index.html
server/: routes.ts  seed.ts  storage.ts
server/services/: bot-manager.ts  ml-recommendations.ts  music-service.ts  url-generator.ts
shared/: schema.ts
